# body2colmap

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMFYUI.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  SESSION_SUMMARY.md  TESTING.md  TROUBLESHOOTING.md  constraints.txt  create_test_data.py  debug_skeleton_joints.py  example_config.yaml  helical.yaml  inspect_colmap.py  install.py  install.sh  install_requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_basic_render.py  test_colmap_export.py  test_orbit_render.py  test_overlap_simple.py  test_skeleton_render.py  test_splat_render.py
ComfyUI-Body2COLMAP/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  body2colmap  pyproject.toml  requirements.txt
ComfyUI-Body2COLMAP/core/: __init__.py  comfy_utils.py  path_utils.py  sam3d_adapter.py  types.py
ComfyUI-Body2COLMAP/nodes/: __init__.py  export_node.py  path_nodes.py  render_node.py
body2colmap/: CLAUDE.md  TRAINING_IMPLEMENTATION.md  __init__.py  camera.py  cli.py  colmap_loader.py  config.py  coordinates.py  edges.py  exporter.py  face.py  path.py  pipeline.py  projection_cli.py  projection_pipeline.py  renderer.py  scene.py  skeleton.py  splat_renderer.py  splat_scene.py  texture_projection.py  train_cli.py  trainer.py  utils.py
docs/: TEXTURE_PROJECTION_GUIDE.md
examples/: CLAUDE.md
tests/: CLAUDE.md  __init__.py  test_camera.py  test_coordinates.py  test_face.py  test_path.py  test_scene.py
tools/: extract_face_landmarks.py
