[project]
name = "comfyui-body2colmap"
version = "0.1.0"
description = "ComfyUI nodes for generating multi-view training data from SAM-3D-Body reconstructions"
authors = [
    {name = "Body2COLMAP Contributors"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["comfyui", "3dgs", "gaussian-splatting", "colmap", "sam3d", "multi-view"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "trimesh>=4.0.0",
    "pyrender>=0.1.45",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "PyOpenGL>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/your-repo/ComfyUI-Body2COLMAP"
Documentation = "https://github.com/your-repo/ComfyUI-Body2COLMAP#readme"
Repository = "https://github.com/your-repo/ComfyUI-Body2COLMAP"
Issues = "https://github.com/your-repo/ComfyUI-Body2COLMAP/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["comfyui_body2colmap"]
